--- a/report/reportconfig/BoletimRio_InfoDengue_v01.tex
+++ b/report/reportconfig/BoletimRio_InfoDengue_v01.tex
@@ -10,7 +10,7 @@
 % Carregando dados  (atualmente é manual)
 
 \fancyfoot[C]{Boletim Municipal - Rio de Janeiro}
-\fancyfoot[R]{SE 22 de 2016}
+\fancyfoot[R]{SE 27 de 2016}
 \fancyfoot[L]{\href{http://info.dengue.mat.br}{InfoDengue}}
 
 \usepackage{Sweave}
@@ -39,7 +39,7 @@
 
 \hypertarget{contents}{\textbf{{\large Boletim Semanal}}} 
 
-\textbf{Semana 22 de 2016} % se, ano, em pp.RData
+\textbf{Semana 27 de 2016} % se, ano, em pp.RData
 
 \begin{itemize}
  \item \hyperlink{estado}{O Estado} 
@@ -73,13 +73,13 @@
 %-------------------------------------------------------------------------------
 \hypertarget{estado}{\heading{Situação da Dengue no Estado do Rio de Janeiro}{6pt}} % \hypertarget provides a label to reference using 
 
-Desde o início do ano, 80474 casos foram registrados no estado, sendo 682 na semana 21. A figura abaixo mostra as condições de transmissão em cada município.
+Desde o início do ano, 93188 casos foram registrados no estado, sendo 179 na semana 27. A figura abaixo mostra as condições de transmissão em cada município.
 
 % Mapa estadual
 \includegraphics[width=0.8\textwidth]{../RJ/figs/Mapa_ERJ.png}
 %-----------------------------------------------------------
 
-Dos 92 municipios, 67 encontram-se em nivel verde, 22 em nivel amarelo, 0 em nivel laranja e 3 em nivel vermelho referentes a semana epidemiológica 21-2016. Para informações mais atualizadas
+Dos 92 municipios, 91 encontram-se em nivel verde, 0 em nivel amarelo, 0 em nivel laranja e 1 em nivel vermelho referentes a semana epidemiológica 27-2016. Para informações mais atualizadas
 sobre o município do Rio de Janeiro ter acesso ao mapa interativo do estado consultar em \href{http://info.dengue.mat.br}{\textit{Info Dengue}}.
 
 
@@ -99,7 +99,7 @@ As cores indicam niveis de atenção
 \end{description}
 \end{mdframed}
 
-\textbf{Na semana passada:} 30 municípios em nivel amarelo, 0 em laranja e 0 em vermelho.  
+\textbf{Na semana passada:} 0 municípios em nivel amarelo, 0 em laranja e 1 em vermelho.  
 
 \end{minipage} % End the main body - first page mini page
 
@@ -109,7 +109,7 @@ As cores indicam niveis de atenção
 %----------------------------------------------------------------------------------
 
 \begin{minipage}[t]{.66\linewidth}\hypertarget{regional}{\heading{Situação da Dengue na Regional Metropolitana I}{6pt}}\includegraphics[\width=8\textwidth]{/home/administrador/Repositorios/AlertaDengueAnalise/report/RJ/figs/MapaRJ_MetropolitanaI.png}\captionof{table}[tabregional]{Resumo das últimas seis semanas epidemiológicas na Regional Metropolitana I }\begin{center}\input{/home/administrador/Repositorios/AlertaDengueAnalise/report/RJ/figs/tabregionalRJ_MetropolitanaI.tex}\end{center}\small{\hyperlink{vartab}{ver descrição das variáveis}}\begin{center}\captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Metropolitana I }\includegraphics[width=1.3\textwidth]{/home/administrador/Repositorios/AlertaDengueAnalise/report/RJ/figs/tweetRJ_MetropolitanaI.png}\end{center}\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}\begin{mdframed}[style=sidebar,frametitle={}]\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Belford Roxo 
-\ysquare Duque de Caxias 
+\gsquare Duque de Caxias 
 \gsquare Itaguaí 
 \gsquare Japeri 
 \gsquare Magé 
@@ -117,11 +117,9 @@ As cores indicam niveis de atenção
 \gsquare Nilópolis 
 \gsquare Nova Iguaçu 
 \gsquare Queimados 
-\ysquare Rio de Janeiro 
+\gsquare Rio de Janeiro 
 \gsquare São João de Meriti 
-\ysquare Seropédica \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage
-
-%-----------------------------------------------------------------------------------%	MAIN BODY - THIRD PAGE - PARTE PRINCIPAL - Municipio
+\gsquare Seropédica \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage%-----------------------------------------------------------------------------------%	MAIN BODY - THIRD PAGE - PARTE PRINCIPAL - Municipio
 %-----------------------------------------------------------------------------------
  \begin{minipage}[t]{0.6\linewidth} % Mini page taking up 100% of the actual page
 \hypertarget{mun}{\heading{Situação da Dengue na Cidade do Rio de Janeiro: Mapa}{6pt}} % \hypertarget 
@@ -152,8 +150,8 @@ As cores indicam niveis de atenção
 
 \begin{itemize}\gsquare APS  1.0 
 \gsquare APS  2.1 
-\ysquare APS  2.2 
-\ysquare APS  3.1 
+\gsquare APS  2.2 
+\gsquare APS  3.1 
 \gsquare APS  3.2 
 \gsquare APS  3.3 
 \gsquare APS  4.0 
